<resources>
    <string name="app_name">My Cards</string>
    <string name="card_number">card number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="valid_till">Valid Till</string>
    <string name="cvv">cvv</string>
    <string name="card_type">Card Type</string>
    <string name="notes_hint">Kotak Mahindra Credit Card</string>
    <string name="month">Date</string>
    <string name="year">Year</string>
    <string name="slash"> / </string>
    <string name="click_here_n_nto_add_your_first_card">Click here\n\nto add your first card</string>
    <string name="_20">20</string>
    <string name="save">save</string>
    <string name="nfc">Add using NFC</string>
    <string name="place_you_card_back_of_your_phone">Place you card backside of the phone</string>
</resources>