<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_dark"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nfc_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_button_two"
        android:fontFamily="@font/rajdhani_medium"
        android:text="@string/nfc"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/marjan"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:shapeAppearanceOverlay="@style/corners_ten_percentage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/rajdhani_medium"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintVertical_bias="0.839" />

    <EditText
        android:id="@+id/edit_card_number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="3dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="19"
        android:maxLines="1"
        android:nextFocusDown="@id/edit_holder_name"
        android:paddingHorizontal="16dp"
        android:paddingVertical="1dp"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edit_valid_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="3dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="2"
        android:maxLines="1"
        android:nextFocusDown="@id/edit_valid_year"
        android:paddingHorizontal="2dp"
        android:paddingVertical="1dp"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/edit_card_notes"
        app:layout_constraintHeight_percent="0.0375"
        app:layout_constraintStart_toStartOf="@id/edit_holder_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_holder_name"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent="0.1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edit_valid_year"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="3dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="4"
        android:maxLines="1"
        android:nextFocusDown="@id/edit_cvv"
        android:paddingHorizontal="2dp"
        android:paddingVertical="1dp"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_valid_date"
        app:layout_constraintEnd_toEndOf="@+id/edit_holder_name"
        app:layout_constraintHeight_percent="0.0375"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/edit_valid_date"
        app:layout_constraintTop_toTopOf="@+id/edit_valid_date"
        app:layout_constraintVertical_bias="0.596"
        app:layout_constraintWidth_percent="0.15"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edit_holder_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="3dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:nextFocusDown="@id/edit_valid_date"
        android:paddingHorizontal="16dp"
        android:paddingVertical="1dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.0375"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/edit_card_number"
        app:layout_constraintTop_toBottomOf="@+id/edit_card_number"
        app:layout_constraintVertical_bias="0.23"
        app:layout_constraintWidth_percent="0.65"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/text_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:text="@string/card_number"
        android:textAllCaps="true"
        android:textColor="@color/light_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/edit_card_number"
        app:layout_constraintEnd_toEndOf="@id/edit_card_number"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/edit_card_number"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/text_card_number_warning"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/warning"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/text_card_number"
        app:layout_constraintDimensionRatio="1.1:1"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintHeight_percent="0.016"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@id/text_card_number"
        app:layout_constraintTop_toTopOf="@id/text_card_number"
        app:layout_constraintVertical_bias="0.55" />


    <TextView
        android:id="@+id/text_holder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:text="@string/card_holder_name"
        android:textAllCaps="true"
        android:textColor="@color/light_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/edit_holder_name"
        app:layout_constraintEnd_toEndOf="@id/edit_holder_name"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/edit_holder_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_card_number"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/text_holder_name_warning"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/warning"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/text_holder_name"
        app:layout_constraintDimensionRatio="1.1:1"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintHeight_percent="0.016"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@id/text_holder_name"
        app:layout_constraintTop_toTopOf="@id/text_holder_name"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/text_valid_till"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:text="@string/valid_till"
        android:textAllCaps="true"
        android:textColor="@color/light_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/edit_valid_date"
        app:layout_constraintEnd_toEndOf="@id/edit_valid_date"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/edit_valid_date"
        app:layout_constraintTop_toBottomOf="@+id/edit_holder_name"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/text_valid_till_warning"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/warning"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/text_valid_till"
        app:layout_constraintDimensionRatio="1.1:1"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintHeight_percent="0.016"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@id/text_valid_till"
        app:layout_constraintTop_toTopOf="@id/text_valid_till"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/text_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:text="@string/slash"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_valid_date"
        app:layout_constraintEnd_toStartOf="@+id/edit_valid_year"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/edit_valid_date"
        app:layout_constraintTop_toTopOf="@+id/edit_valid_date" />


    <TextView
        android:id="@+id/text_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:text="@string/cvv"
        android:textAllCaps="true"
        android:textColor="@color/light_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_valid_till"
        app:layout_constraintEnd_toEndOf="@+id/edit_holder_name"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@id/edit_valid_date"
        app:layout_constraintTop_toTopOf="@+id/text_valid_till"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/text_cvv_warning"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/warning"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/text_cvv"
        app:layout_constraintDimensionRatio="1.1:1"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintHeight_percent="0.016"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@id/text_cvv"
        app:layout_constraintTop_toTopOf="@id/text_cvv"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/text_card_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:text="@string/card_type"
        android:textAllCaps="true"
        android:textColor="@color/light_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_cvv"
        app:layout_constraintEnd_toEndOf="@+id/spinner_card_type"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/spinner_card_type"
        app:layout_constraintTop_toTopOf="@+id/text_cvv" />

    <EditText
        android:id="@+id/edit_cvv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="3dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="3"
        android:maxLines="1"
        android:nextFocusDown="@id/edit_card_notes"
        android:paddingHorizontal="2dp"
        android:paddingVertical="1dp"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_valid_year"
        app:layout_constraintEnd_toEndOf="@+id/edit_holder_name"
        app:layout_constraintHeight_percent="0.0375"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/text_cvv"
        app:layout_constraintTop_toTopOf="@+id/edit_valid_year"
        app:layout_constraintWidth_percent="0.15"
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/spinner_card_type"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_shape"
        android:popupBackground="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/edit_cvv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.0375"
        app:layout_constraintStart_toEndOf="@+id/edit_cvv"
        app:layout_constraintTop_toTopOf="@+id/edit_cvv"
        app:layout_constraintWidth_percent="0.35" />

    <EditText
        android:id="@+id/edit_card_notes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="3dp"
        android:gravity="center"
        android:hint="@string/notes_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="2dp"
        android:paddingVertical="1dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintEnd_toEndOf="@+id/spinner_card_type"
        app:layout_constraintHeight_percent="0.0375"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_valid_date"
        app:layout_constraintTop_toBottomOf="@+id/edit_cvv"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>